feat: setup quorum-explorer

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,16 @@
 version: '3.3'
 
 services:
+  explorer:
+    image: consensys/quorum-explorer:latest
+    volumes:
+      - ./config.json:/app/config.json
+      - ./.env.production:/app/.env.production
+    ports:
+      - 25000:25000/tcp
+    networks:
+      - postnet
+
   node0:
     build:
       context: .
