chore: updated env template

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-
+# Network building
 NETWORK_ID= 
 
 ADDRESS_VALIDATOR_0=
@@ -8,3 +8,13 @@ ADDRESS_VALIDATOR_3=
 ADDRESS_VALIDATOR_4=
 
 GAS_PRICE=
+
+# Explorer (production)
+QE_BASEPATH="/explorer"
+QE_CONFIG_PATH="config.json"
+NODE_ENV=production
+DISABLE_AUTH=true
+
+# only for DISABLED_AUTH=false
+# NEXTAUTH_URL=
+# NEXTAUTH_URL_INTERNAL=
